kubernetes/cwa/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cwa
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cwa
  template:
    metadata:
      labels:
        app: cwa
    spec:
      containers:
      - name: cwa
        image: ghcr.io/crocodilestick/calibre-web-automated:dev
        ports:
        - containerPort: 8083
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /calibre-library
          name: metadata
        - mountPath: /books
          name: books
        - mountPath: /cwa-book-ingest
          name: ingestion
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: cwa-config
      - name: metadata
        persistentVolumeClaim:
          claimName: cwa-metadata
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/cwa
        name: books
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/cwa-ingestion
        name: ingestion
