kubernetes/cwa/service-downloader.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: cwa-downloader

spec:
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
    name: http
  selector:
    app: cwa-downloader
