kubernetes/cwa/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: cwa

spec:
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: cwa
