kubernetes/cwa/ingress-downloader.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cwa-downloader
  annotations:
    ak-type: simple
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: CWA Downloader
    gethomepage.dev/description: CWA Book Downloader
    gethomepage.dev/group: Media
    gethomepage.dev/icon: calibre-web.png

spec:
  tls:
  - hosts:
    - cwa-downloader.k.oneill.net
    secretName: cwa-downloader-tls
  rules:
  - host: cwa-downloader.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cwa-downloader
            port:
              number: 8084
  ingressClassName: nginx
